--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -2,7 +2,7 @@
 
 a {
     color: $secondary;
-    text-decoration: underline;
+    text-decoration: none;
     transition: color 0.3s ease-in-out;
 
     &:hover {
