--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -35,7 +35,7 @@
         list-style: none;
         margin: 0 -1rem;
         padding: 0 1rem;
-        background: $primary-dark;
+        background: $primary-darkest;
 
         &.open {
             display: block;
@@ -43,7 +43,7 @@
     }
 
     .nav--utility {
-        background: $primary;
+        background: $primary-darker;
     }
 
     .nav--main {
