Build the rest of the page's skeleton

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,1 +1,12 @@
 // Footer
+
+
+.footer {
+    font-size: 0.9rem;
+    color: $white;
+    background: $primary-darkest;
+
+    a {
+        color: $white;
+    }
+}
