--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -1,11 +1,11 @@
 // Links
 
 a {
-    color: $secondary;
+    color: $primary;
     text-decoration: none;
     transition: color 0.3s ease-in-out;
 
     &:hover {
-        color: $secondary-light;
+        color: $primary-light;
     }
 }
