Add a couple section classes for styling

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4,6 +4,14 @@
     padding: 5rem 0;
 }
 
+.section--content {
+
+}
+
+.section--quote {
+
+}
+
 .section--pre-footer {
     background: $primary-darker;
 }
