--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -99,3 +99,23 @@ dl {
         }
     }
 }
+
+.list-social {
+    a {
+        font-size: 2.5rem;
+        color: $white;
+
+        i {
+            transform: translateY(0);
+            transition: 0.3s ease-in-out;
+        }
+
+        &:hover {
+
+            i {
+                transform: translateY(-5px);
+                color: $primary-light;
+            }
+        }
+    }
+}
