--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -101,9 +101,24 @@ dl {
 }
 
 .list-social {
+    margin-bottom: 0;
+
+    li {
+        padding: 0 0.5rem;
+
+        &:first-of-type {
+            padding-left: 0;
+        }
+
+        &:last-of-type {
+            padding-right: 0;
+        }
+    }
+
     a {
         font-size: 2.5rem;
         color: $white;
+        line-height: 1;
 
         i {
             transform: translateY(0);
@@ -117,5 +132,9 @@ dl {
                 color: $primary-light;
             }
         }
+    }
+
+    @media (min-width: $bp-m) {
+        float: left;
     }
 }
