Update desktop main nav link color

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -81,7 +81,10 @@
         }
     }
 
-    .nav--utility {
+    .nav--main {
+        a:not(.btn) {
+            color: $black;
+        }
     }
 }
 
